--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.2+3
 
 environment:
   sdk: ^3.6.1
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.3.0
   supabase_flutter: ^2.8.4
   timezone: ^0.10.0
+  flutter_highlight: ^0.7.0
+  connectivity_plus: ^6.1.3
 
 dev_dependencies:
   flutter_test:
