--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,11 +30,16 @@ android {
         versionName = flutter.versionName
     }
 
+    // Use debug signing config for now to make the release build work
+    // For production, you should create a proper keystore and update this configuration
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Using debug signing config for now so the build works
             signingConfig = signingConfigs.debug
+            // Disable minification and shrinking for now to simplify the build
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
